# thing.sdk

./: .gitignore  Cargo.toml  Makefile  README.md
bindings/ffi/: Cargo.toml  build.rs  uniffi.toml
bindings/ffi/.cargo/: config.toml
bindings/ffi/src/: hd_wallet.rs  lib.rs  signer.rs  test.rs  thing.udl
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
crates/hd-wallet/: Cargo.toml
crates/hd-wallet/src/: lib.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: hd_wallet.rs  lib.rs  signer.rs  test.rs
projects/android/app/: build.gradle
projects/android/app/src/androidTest/java/app/thing/android/: ExampleInstrumentedTest.kt
projects/android/app/src/main/: AndroidManifest.xml
projects/android/app/src/main/java/app/thing/android/: MainActivity.kt
projects/android/app/src/main/res/layout/: activity_main.xml
projects/android/app/src/test/java/app/thing/android/: ExampleUnitTest.kt
projects/android/gradle/wrapper/: gradle-wrapper.properties
projects/ios/Sources/: ContentView.swift  iosApp.swift
projects/ios/headers/: Bridging-Header.h
projects/ios/ios.xcodeproj/: project.pbxproj
projects/ios/ios.xcodeproj/project.xcworkspace/xcuserdata/jon.xcuserdatad/: UserInterfaceState.xcuserstate
projects/web/: index.html
uniffi-bindgen/: Cargo.toml
