[package]
name = "thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = "0.25"
uniffi_macros = "0.25"
bitcoin = { version = "0.31", features = ["rand-std"] }
serde = { version = "1.0" }
serde_json = "1.0"

[build-dependencies]
uniffi_build = { version = "0.25", features = ["builtin-bindgen"] }
