[package]
name = "thing-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[lib]
crate-type = ["cdylib"]

[dependencies]
secp256k1-sys = "0.9.1"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
wallet = { path = "../../crates/wallet" }