[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.31", features = ["rand-std"] }
bip39 = { version = "2.0", features = ["rand"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
serde_json = "1.0"